src/pages/static/assets/global.css
html {
  scroll-behavior: smooth;
}
.scroller-blocker {
  position: fixed;
  height: 101%;
  width: 100%;
  overflow: scroll;
}
/* EDITOR SHELL STYLES */
.ProseMirror,
.toastui-editor-contents {
  font-size: 16px !important;
}
.toastui-editor-defaultUI .toastui-editor-md-tab-container {
  border-color: #00000010 !important;
}
.toastui-editor-dark .toastui-editor-md-container,
.toastui-editor-dark .toastui-editor-ww-container,
.toastui-editor-dark .toastui-editor-defaultUI-toolbar,
.toastui-editor-dark .toastui-editor-md-tab-container,
.toastui-editor-dark .toastui-editor-ww-tab-container {
  background: transparent !important;
}
.toastui-editor-dark .toastui-editor-toolbar,
.toastui-editor-dark .toastui-editor-mode-switch {
  background-color: #212836 !important;
}
.toastui-editor-dark .tab-item {
  background-color: #202634 !important;
}
.toastui-editor-dark .tab-item.active {
  background-color: #2b3447 !important;
  border-color: inherit !important;
}
.toastui-editor-toolbar {
  border-top-left-radius: 4px !important;
  border-top-right-radius: 4px !important;
}
.toastui-editor-dark .toastui-editor-popup-body,
.toastui-editor-dark .toastui-editor-popup,
.toastui-editor-dark .toastui-editor-context-menu {
  background-color: #1c212c !important;
}
.toastui-editor-dark .toastui-editor-toolbar-icons {
  border-color: transparent !important;
}
.toastui-editor-dark .toastui-editor-toolbar-icons:not(:disabled):hover {
  background-color: #2b3447 !important;
  border-color: inherit !important;
}

.toastui-editor-custom-toolbar-icon:not(:disabled):hover {
  outline: 1px solid #e4e7ee !important;
  background-color: #fff !important;
}
.toastui-editor-dark .toastui-editor-custom-toolbar-icon:not(:disabled):hover {
  background-color: #2b3447 !important;
  outline: 1px solid #cccccc2a !important;
}
.toastui-editor-toolbar-item-wrapper {
  margin: 0 !important;
}

/* EDITOR TOOLBAR STYLES */

.toastui-editor-custom-toolbar-icon {
  background-repeat: no-repeat;
  background-position: center;
  background-size: 60%;
  display: inline-block;
  vertical-align: middle;
  background-clip: content-box;
  border: none !important;
}
.redo__toolbarBtn {
  background-image: url(/images/editor-toolbar/redo-icon.png) !important;
  background-repeat: no-repeat;
  background-position: center;
  background-size: 60%;
  display: inline-block;
  vertical-align: middle;
  background-clip: content-box;
  border: none !important;
}
.toastui-editor-dark .redo__toolbarBtn {
  background-image: url(/images/editor-toolbar/assets/redo-icon-dark.png) !important;
}

.undo__toolbarBtn {
  background-image: url(/images/editor-toolbar/undo-icon.png) !important;
}
.toastui-editor-dark .undo__toolbarBtn {
  background-image: url(/images/editor-toolbar/-icon-dark.png) !important;
}

/* EDITOR CONTENT STYLES */
.toastui-editor-main * {
  font-family: poppins, sans-serif !important;
}
.toastui-editor-main h1,
.toastui-editor-main h2,
.toastui-editor-main h3 {
  border-bottom: none !important;
  padding-bottom: 0 !important;
  margin-bottom: 0.5em !important;
  margin-top: 1em !important;
}

/* WIKI MEDIA SHOWCASE STYLES */
#bp_container > .bp-x {
  justify-content: center;
  align-items: center;
  display: flex;
}

#bp_container .bp-xc {
  left: 0% !important;
  bottom: 0% !important;
  height: 100% !important;
  padding: 9px 20px 7px !important;
  background: #ffffff33 !important;
  border-radius: 0 !important;
}

#bp_caption {
  overflow: hidden;
  width: fit-content;
  padding: 0.8em !important;
  background: #2b313bd8 !important;
  padding-left: 40px;
  margin: 0 auto !important;
  margin-bottom: 20px !important;
  border-radius: 12px !important;
}
#bp_caption span {
  margin-left: 60px;
}

/* CHAKRA UI STYLE FIXES */
.chakra-popover__popper {
  z-index: 999 !important;
}

